fix: compress terminal test session logs
Changelog: n/a: release note recorded in CHANGELOG.0.6.md

Guide: n/a

Known-Discrepancies: n/a

S3K-Known-Discrepancies: n/a

Agent-Docs: updated

Configuration-Docs: n/a

Skills: n/a